fix modal close button on mobile devices

--- a/ui/common/css/component/_modal.scss
+++ b/ui/common/css/component/_modal.scss
@@ -17,15 +17,20 @@
     .close {
       color: $c-font;
       position:absolute;
-      top: -12px;
-      right: -12px;
-      background: $c-bg-popup;
       font-size: 16px;
       line-height: 27px;
       width: 32px;
       height: 32px;
-      border-radius: 50%;
       cursor: pointer;
+      top: 0;
+      right: 0;
+      background: none;
+      @include breakpoint($mq-small) {
+        top: -12px;
+        right: -12px;
+        background: $c-bg-popup;
+        border-radius: 50%;
+      }
     }
     .close:hover {
       @extend %box-shadow;
